# podcast-opml-watcher

./: .gitignore  .pre-commit-config.yaml  README.md  podcast_watcher_config.json  pyproject.toml
.github/workflows/: linter.yml
src/podcast_opml_watcher/: __init__.py
