[project]
name = "podcast_opml_watcher"
version = "0.1.0"
description = "Watch OPML file for new podcast episodes and transcribe them using podcast2md"
readme = "README.md"
authors = [
    { name = "Peter Reuterås", email = "peter@reuteras.net" }
]
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
]

[project.scripts]
podcast-opml-watcher = "podcast_opml_watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
